# warpchat

./: .gitignore  Cargo.toml  README.md
migrations/create_messages/: up.sql
src/: help.txt  lib.rs  main.rs  models.rs  routes.rs  schema.rs
vite/: package.json  vite.config.js
vite/src/: App.jsx  Message.css  Message.jsx
