[package]
name = "rocket"
version = "0.1.0"
authors = ["John Doe <johndoe@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres"] }
giphy = "0.4.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.9"
warp = "0.3"
futures-util = "0.3.21"
reqwest = "0.11.11"
urlencoding = "2.1.0"
dotenv = "0.15.0"
